@startuml
!pragma layout smetana
class Person{
    name
    email
    phoneNumber
}

class Student{
    student_id
    rsvps
    clubMembership
    ticket
}

class ClubMembership{
    student
    club
    isAdmin
}


class FacultyAdministrator{
    application
}

class Club{
    name
    description
    ClubMembership
    events
    FundingApplications
}

class Venue{
    name
    location
    capacity
}

class Event{
    title
    description
    date
    time
    venue
    cost
    club
    rsvps
    capacity
}

class FundingApplication{
    description
    amount
    semester
    status
    club
    event
    date
    reviewer
}

class RSVP{
    student
    event
    status
}

class ticket{
    student
    rsvp
    status
}
Person <|-- Student
Person <|-- FacultyAdministrator
FundingApplication "0..*"--"1" FacultyAdministrator: approval 
Club "1" -- "0..*" Event : hold 
Event  -- "1" Venue : locate 
Student "1" -- "0..*" RSVP : submit 
Event "1" -- "0..*" RSVP : contain 
Club "1"--"0..*" FundingApplication : submit 
FundingApplication  -- "1..*" Event : spend on 
RSVP "1"--"1..3" ticket : contain >
Student "1" -- "0..*" ticket: hold >
Club "1" -- "1..*" ClubMembership :affiliation
Student "1"--"0..*" ClubMembership :own
@enduml